--- a/static/css/juke-style.css
+++ b/static/css/juke-style.css
@@ -42,22 +42,24 @@
 
 
 /* SONG BLOCK STYLES */
-.juke-song-block {
-	background: white url(../images/song/threelines.png) 92% center no-repeat;
-	-webkit-background-size: contain;
-	-moz-background-size: contain;
-	-o-background-size: contain;
-	background-size: contain;
+.song-block {
+	padding: 0px;
+	text-align: center;
+	line-height: 50px;
+	height: 50px;
+	//background: white url(../images/song/threelines.png) 92% center no-repeat;
 }
 
-.juke-song-remove-btn {
+.song-remove-btn {
 	-webkit-transition: 0.25s linear;
 	transition: 0.25s linear;
 	float: right;
-	padding: 0;
+	padding: 0px;
+	margin: 0px;
+	border-radius: 0 3px 3px 0;
 	height: 100%;
 	width: 50px;
-	background: #E10000;
+	background: #FF8080;
 }
 
 /* UPLOAD BLOCK STYLES */
