--- a/static/css/juke-style.css
+++ b/static/css/juke-style.css
@@ -4,6 +4,11 @@
 	background: #E6E6E6;
 }
 
+.juke-heightframe {
+	position: relative;
+	height: 500px;
+}
+
 /* GENERIC CARD STYLE */
 .card {
 	padding: 1.5rem;
@@ -16,20 +21,22 @@
 
 .userlist {
 	padding: 1rem;
+	height: 395px;
 }
 
 .userlist-user {
 	background: #E6E6E6;
-	height: 60px;
+	height: 67px;
+	margin: 0 0 1rem 0;
 }
 
 .userlist-control-btn {
-	background: #B20000;
-	color: #000000;
+	background: #C13333;
+	color: #FFFFFF;
 	padding: 0px;
 	height: 85px;
 	text-align: center;
-	line-height: 75px;
+	line-height: 85px;
 	-webkit-transition: 0.25s;
 	transition: 0.25s;
 }
@@ -37,8 +44,7 @@
 .userlist-control-btn:focus,
 .userlist-conrtol-btn:active {
 	cursor: pointer;
-	background: #E60000;
-	color: #333333;
+	background: #B20000;
 	-webkit-transition: 0.25s;
 	transition: 0.25s;
 }
@@ -65,7 +71,7 @@
 	text-align: center;
 	line-height: 40px;
 	color: #FFFFFF;
-	background: #E6E6E6;
+	background: #C13333;
 }
 .song-remove-btn:hover,
 .song-remove-btn:focus,
@@ -91,14 +97,34 @@
 }
 
 .upload-btn {
+	padding: 0 15px 0 15px;
+	margin: 5px;
+	height: 42px;
+	text-align: center;
+	line-height: 42px;
+	color: #FFFFFF;
+	background: #C13333;
 	-webkit-transition: 0.25s linear;
 	transition: 0.25s linear;
-	//float: right;
-	padding: 0px;
-	margin: 5px;
-	height: 100%;
-	width: 50px;
+}
+.upload-btn:hover,
+.upload-btn:focus,
+.upload-btn:active {
+	cursor: pointer;
 	background: #B20000;
+	-webkit-transition: 0.25s;
+	transition: 0.25s;
+}
+
+/* MUSIC CONTROLS STYLES */
+.music-controls {
+	width: 100%;
+	height: 85px;
+	position: absolute;
+	bottom: 0;
+	z-index: -1;
+	//background: #5959FF;
+	background: #CCCCCC;
 }
 
 /* SUNKEN TEXT EFFECT STYLES */
